prepare to docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
 
-  restfulAPI:
+  restfulapi:
     build: ./restfulAPI
     container_name: restfulAPI
     restart: always
