--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,7 @@
 server {
     listen 80;
     location / {
+    server_name localhost:4200;
     include uwsgi_params;
     uwsgi_pass restfulAPI:8080;
     }
