--- a/restfulAPI/requirements.txt
+++ b/restfulAPI/requirements.txt
@@ -3,6 +3,7 @@ cffi==1.14.0
 click==7.1.2
 cryptography==2.9.2
 Flask==1.1.2
+Flask-Cors==3.0.8
 Flask-JWT-Extended==3.24.1
 Flask-RESTful==0.3.8
 Flask-SQLAlchemy==2.4.3
@@ -15,7 +16,6 @@ PyJWT==1.7.1
 PyMySQL==0.9.3
 pymysql-pool==0.3.4
 pymysql-pooling==1.0.6
-pyOpenSSL==19.1.0
 pytz==2020.1
 six==1.15.0
 SQLAlchemy==1.3.17
