--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost:4200;
+    server_name pttlite.ddns.net;
     location / {
     include uwsgi_params;
     uwsgi_pass restfulAPI:8080;
