--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -4,4 +4,8 @@ RUN rm /etc/nginx/conf.d/default.conf
 
 COPY nginx.conf /etc/nginx/conf.d/
 
+COPY ssl.csr /etc/nginx/ssl.csr
+
+COPY ssl.key /etc/nginx/ssl.key
+
 EXPOSE 443
