--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,3 +12,15 @@ server {
     uwsgi_pass restfulAPI:8080;
     }
 }
+
+server {
+    listen 443 ssl;
+    server_name pttlite.ddns.net;
+    ssl_certificate /etc/nginx/ssl.csr;
+    ssl_certificate_key /etc/nginx/ssl.key;
+
+    location / {
+        include uwsgi_params;
+        uwsgi_pass restfulAPI:8080;
+    }
+}
