--- a/restfulAPI/Dockerfile
+++ b/restfulAPI/Dockerfile
@@ -1,12 +1,14 @@
-# FROM ubuntu:18.04
+FROM ubuntu:18.04
 
-FROM python:3.7.7-stretch
+# FROM python:3.7.7-stretch
 
 WORKDIR /restfulAPI
 
 ADD . /restfulAPI
 
 # RUN cat /etc/os-release
+
+RUN apt-get install python3
 
 RUN pip install -r requirements.txt
 
