--- a/restfulAPI/Dockerfile
+++ b/restfulAPI/Dockerfile
@@ -8,8 +8,12 @@ ADD . /restfulAPI
 
 # RUN cat /etc/os-release
 
-RUN apt-get install python3
-
-RUN pip install -r requirements.txt
+RUN apt-get update \
+    && apt-get upgrade -y \
+    && apt-get install python3 -y --assume-yes apt-utils \
+    && apt-get install python3-pip -y --assume-yes apt-utils \
+    && apt-get install ipython3 -y --assume-yes apt-utils \
+    && pip3 install -r requirements.txt \
+    && apt-get install certbot python-certbot-nginx -y 
 
 CMD ["uwsgi", "uwsgi.ini"]
