--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,7 +1,11 @@
-FROM nginx
+# FROM nginx
 
-RUN rm /etc/nginx/conf.d/default.conf
+FROM ubuntu:18.04
 
+RUN apt-get update -y \
+    && apt-get install nginx \
+    && rm /etc/nginx/conf.d/default.conf
+    
 COPY nginx.conf /etc/nginx/conf.d/
 
 EXPOSE 443
