--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -2,8 +2,8 @@
 
 FROM ubuntu:18.04
 
-RUN apt-get update \
-    && apt-get install nginx \
+RUN apt-get update -y \
+    && apt-get install nginx -y \
     && rm /etc/nginx/conf.d/default.conf
 
 COPY nginx.conf /etc/nginx/conf.d/
