--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -4,7 +4,7 @@ FROM ubuntu:18.04
 
 RUN apt-get update -y \
     && apt-get install nginx -y \
-    && rm /etc/nginx/conf.d/default.conf
+#    && rm /etc/nginx/conf.d/default.conf
 
 COPY nginx.conf /etc/nginx/conf.d/
 
