--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,13 +1,10 @@
-# FROM nginx
+FROM nginx
 
-FROM ubuntu:18.04
+# FROM ubuntu:18.04
 
-RUN apt-get update -y \
-    && apt-get install nginx -y
-#   && rm /etc/nginx/conf.d/default.conf
+RUN apt-get update \
+    rm /etc/nginx/conf.d/default.conf
 
 COPY nginx.conf /etc/nginx/conf.d/
 
-EXPOSE 80 443
-
-CMD service nginx start
+EXPOSE 443
