--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -2,8 +2,9 @@ FROM nginx
 
 # FROM ubuntu:18.04
 
-RUN apt-get update \
-    rm /etc/nginx/conf.d/default.conf
+RUN apt-get update
+
+RUN rm /etc/nginx/conf.d/default.conf
 
 COPY nginx.conf /etc/nginx/conf.d/
 
