--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,12 +13,11 @@ server {
     }
 }
 
-#server {
-#    listen 443 ssl;
-#    server_name pttlite.ddns.net;
-#
-#    location / {
-#        include uwsgi_params;
-#        uwsgi_pass restfulAPI:8080;
-#    }
-#}
+server {
+    listen 443;
+    server_name pttlite.ddns.net;
+    location / {
+        include uwsgi_params;
+        uwsgi_pass restfulAPI:8080;
+    }
+}
