--- a/restfulAPI/requirements.txt
+++ b/restfulAPI/requirements.txt
@@ -1,10 +1,12 @@
 aniso8601==8.0.0
+blinker==1.4
 cffi==1.14.0
 click==7.1.2
 cryptography==2.9.2
 Flask==1.1.2
 Flask-Cors==3.0.8
 Flask-JWT-Extended==3.24.1
+Flask-Mail==0.9.1
 Flask-RESTful==0.3.8
 Flask-SQLAlchemy==2.4.3
 install==1.3.3
