--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,7 +6,8 @@ server  {
 
 server {
     listen 80;
-    server_name pttlite.ddns.net;
+    #server_name pttlite.ddns.net;
+    server_name pttlite.cloudns.asia;
     location / {
     include uwsgi_params;
     uwsgi_pass restfulAPI:8080;
@@ -15,7 +16,8 @@ server {
 
 server {
     listen 443;
-    server_name pttlite.ddns.net;
+    #server_name pttlite.ddns.net;
+    server_name pttlite.cloudns.asia;
     location / {
         include uwsgi_params;
         uwsgi_pass restfulAPI:8080;
