--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,6 @@
 server  {
     listen 80;
+    include ip.black;
     server_name _;
     return 404;
 }
@@ -7,6 +8,7 @@ server  {
 server {
     listen 80;
     #server_name pttlite.ddns.net;
+    include ip.black;
     server_name pttlite.cloudns.asia;
     location / {
     include uwsgi_params;
@@ -17,6 +19,7 @@ server {
 server {
     listen 443;
     #server_name pttlite.ddns.net;
+    include ip.black;
     server_name pttlite.cloudns.asia;
     location / {
         include uwsgi_params;
