--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,6 @@
 server  {
     listen 80;
+    include blacklist.conf;
     server_name _;
     return 404;
 }
@@ -9,7 +10,7 @@ server {
     #server_name pttlite.ddns.net;
     server_name pttlite.cloudns.asia;
     location / {
-    include ip.black;
+    include blacklist.conf;
     include uwsgi_params;
     uwsgi_pass restfulAPI:8080;
     }
@@ -20,7 +21,7 @@ server {
     #server_name pttlite.ddns.net;
     server_name pttlite.cloudns.asia;
     location / {
-        include ip.black;
+        include blacklist.conf;
         include uwsgi_params;
         uwsgi_pass restfulAPI:8080;
     }
