IP black list add

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,7 @@
-server  {
+include blacklist.conf;s
+
+erver  {
     listen 80;
-    include blacklist.conf;
     server_name _;
     return 404;
 }
@@ -10,7 +11,6 @@ server {
     #server_name pttlite.ddns.net;
     server_name pttlite.cloudns.asia;
     location / {
-    include blacklist.conf;
     include uwsgi_params;
     uwsgi_pass restfulAPI:8080;
     }
@@ -21,7 +21,6 @@ server {
     #server_name pttlite.ddns.net;
     server_name pttlite.cloudns.asia;
     location / {
-        include blacklist.conf;
         include uwsgi_params;
         uwsgi_pass restfulAPI:8080;
     }
