--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -8,6 +8,6 @@ RUN rm /etc/nginx/conf.d/default.conf
 
 COPY nginx.conf /etc/nginx/conf.d/
 
-COPY blacklist.conf /etc/nginx/conf.d/
+COPY blacklist.conf /etc/nginx/
 
 EXPOSE 443
