add  no-ip to nginx

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,7 +8,7 @@ server  {
 
 server {
     listen 80;
-    #server_name pttlite.ddns.net;
+    server_name pttlite.ddns.net;
     server_name pttlite.cloudns.asia;
     location / {
     include uwsgi_params;
@@ -18,7 +18,7 @@ server {
 
 server {
     listen 443;
-    #server_name pttlite.ddns.net;
+    server_name pttlite.ddns.net;
     server_name pttlite.cloudns.asia;
     location / {
         include uwsgi_params;
