--- a/.gitignore
+++ b/.gitignore
@@ -115,6 +115,9 @@ venv.bak/
 .pttLiteAPI/
 resrtfulAPI/.pttLiteAPI/
 
+#img folder
+imgs/
+
 # Spyder project settings
 .spyderproject
 .spyproject
