--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "python.pythonPath": "/Library/Frameworks/Python.framework/Versions/3.8/bin/python3.8"
+    "python.pythonPath": "/Library/Frameworks/Python.framework/Versions/3.8/bin/python3.8",
+    "python.linting.pylintEnabled": false,
+    "python.linting.enabled": false,
+    "python.linting.banditEnabled": false,
+    "python.linting.flake8Enabled": true
 }
