--- a/restfulAPI/uwsgi.ini
+++ b/restfulAPI/uwsgi.ini
@@ -1,7 +1,8 @@
 [uwsgi]
+socket = 0.0.0.0:8080
 wsgi-file = app.py
 callable = app
-socket = 0.0.0.0:8080
+buffer-size=32768
 processes = 4
 threads = 2
 master = true
