--- a/restfulAPI/requirements.txt
+++ b/restfulAPI/requirements.txt
@@ -1,25 +1,32 @@
-aniso8601==8.0.0
-blinker==1.4
-cffi==1.14.0
-click==7.1.2
-cryptography==2.9.2
-Flask==1.1.2
-Flask-Cors==3.0.8
-Flask-JWT-Extended==3.24.1
-Flask-Mail==0.9.1
-Flask-RESTful==0.3.8
-Flask-SQLAlchemy==2.4.3
-install==1.3.3
-itsdangerous==1.1.0
-Jinja2==2.11.2
-MarkupSafe==1.1.1
-pycparser==2.20
-PyJWT==1.7.1
-PyMySQL==0.9.3
-pymysql-pool==0.3.4
-pymysql-pooling==1.0.6
-pytz==2020.1
-six==1.15.0
-SQLAlchemy==1.3.17
-uWSGI==2.0.19.1
-Werkzeug==1.0.1
+aniso8601          8.0.0
+astroid            2.4.2
+blinker            1.4
+cffi               1.14.0
+click              7.1.2
+cryptography       2.9.2
+Flask              1.1.2
+Flask-Cors         3.0.8
+Flask-JWT-Extended 3.24.1
+Flask-Mail         0.9.1
+Flask-RESTful      0.3.8
+Flask-SQLAlchemy   2.4.3
+install            1.3.3
+isort              5.6.3
+itsdangerous       1.1.0
+Jinja2             2.11.2
+lazy-object-proxy  1.4.3
+MarkupSafe         1.1.1
+mccabe             0.6.1
+pip                20.2.4
+pycparser          2.20
+PyJWT              1.7.1
+PyMySQL            0.9.3
+pytz               2020.1
+setuptools         49.6.0
+six                1.15.0
+SQLAlchemy         1.3.17
+toml               0.10.1
+uWSGI              2.0.19.1
+Werkzeug           1.0.1
+wheel              0.35.1
+wrapt              1.12.1
