--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,13 +1,10 @@
 FROM nginx
 
-# FROM ubuntu:18.04
+RUN apt-get update \
+    && apt upgrade \
+    && rm /etc/nginx/conf.d/default.conf
 
-RUN apt-get update
-
-RUN rm /etc/nginx/conf.d/default.conf
-
-COPY nginx.conf /etc/nginx/conf.d/
-
-COPY blacklist.conf /etc/nginx/
+COPY nginx.conf /etc/nginx/conf.d/ \
+    && blacklist.conf /etc/nginx/
 
 EXPOSE 443
