--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,8 +9,8 @@ server  {
 server {
     listen 80;
     server_name pttlite.ddns.net;
-    access_log  /mnt/websites/log/access.log;
-    error_log  /mnt/websites/log/error.log;
+    ; access_log  /mnt/websites/log/access.log;
+    ; error_log  /mnt/websites/log/error.log;
     location / {
     include uwsgi_params;
     uwsgi_pass restfulAPI:8080;
@@ -20,8 +20,8 @@ server {
 server {
     listen 443;
     server_name pttlite.ddns.net;
-    access_log  /mnt/websites/log/access.log;
-    error_log  /mnt/websites/log/error.log;
+    ; access_log  /mnt/websites/log/access.log;
+    ; error_log  /mnt/websites/log/error.log;
     location / {
         include uwsgi_params;
         uwsgi_pass restfulAPI:8080;
