--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -4,7 +4,8 @@ RUN apt-get update \
     && apt upgrade -y \
     && rm /etc/nginx/conf.d/default.conf
 
-COPY nginx.conf /etc/nginx/conf.d/ \
-    && blacklist.conf /etc/nginx/
+COPY nginx.conf /etc/nginx/conf.d/
+
+COPY blacklist.conf /etc/nginx/
 
 EXPOSE 443
