--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,29 @@
-version: "3.7"
+version: "3.8.6"
 
 services:
-
   restfulapi:
     build: ./restfulAPI
-    container_name: restfulAPI
+    container_name: PTTLite_API_DEV
     restart: always
     environment:
-      - APP_NAME=PTTLiteAPI
-    expose:
-      - 8080
+      - HOST = "192.168.30.136"
+      - USER = "flask
+      - PASSWORD = "quQ351dTx"
+      - DB = 'PTTLite'
+      - CHARSET = "utf8mb4"
+      - PORT = 3306
+      - MAX_ALLOWED_PACKET = "16M"
+    volumes:
+      - .:/Restful_API_Folder
+    ports:
+      - 8080:8080
 
   nginx:
     build: ./nginx
-    container_name: nginx
+    container_name: NginX_DEV
     restart: always
+    volumes:
+      - .:/NginX_Folder
     ports:
       - "80:80"
       - "443:443"
