--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,11 +1,10 @@
 FROM nginx
 
 RUN apt-get update \
-    && apt upgrade -y \
+    && apt-get upgrade -y \
+    && apt-get install certbot python-certbot-nginx -y \
     && rm /etc/nginx/conf.d/default.conf
 
 COPY nginx.conf /etc/nginx/conf.d/
 
 COPY blacklist.conf /etc/nginx/
-
-EXPOSE 443
