--- a/restfulAPI/uwsgi.ini
+++ b/restfulAPI/uwsgi.ini
@@ -1,11 +1,33 @@
 [uwsgi]
-socket = 0.0.0.0:8080
 wsgi-file = app.py
 callable = app
+socket = 0.0.0.0:8080
+
+#buffet
 buffer-size = 32768
+
+# workers
+master = true
 processes = 4
 threads = 2
-master = true
+thunder-lock = true
+lazy-apps = false
+cheaper = 2
+cheaper-algo = backlog
+worker = 8
+
+# threading support
+enable-threads = true
+
+# destroy stucked processes
+harakiri = 30
+
+# use meaningful name
+auto-procname = true
+
 chmod-socket = 660
-vacum = true
+# uid=1000
+# gid=1000
+
+vacuum = true
 die-on-term = true
