--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,3 +23,21 @@ server {
         uwsgi_pass restfulAPI:8080;
     }
 }
+
+server {
+    listen 80;
+    server_name pttlite.firewall-gateway.com;
+    location / {
+        include uwsgi_params;
+        uwsgi_pass imagesServer:8080;
+    }
+}
+
+server {
+    listen 443;
+    server_name pttlite.firewall-gateway.com;
+    location / {
+        include uwsgi_params;
+        uwsgi_pass imagesServer:8080;
+    }
+}
